experimental/ir/testdata/fields/reserved.proto.stderr.txt
error: message field name `foo` reserved more than once
  --> testdata/fields/reserved.proto:7:21
   |
 7 |   reserved "valid", "foo", "foo", "bar";
   |                     ^^^^^  ----- `foo` also reserved here

error: message field name `bar` reserved more than once
  --> testdata/fields/reserved.proto:7:35
   |
 7 |   reserved "valid", "foo", "foo", "bar";
   |                                   ^^^^^
 8 |   reserved "bar";
   |            ----- `bar` also reserved here

error: message field name `baz` reserved more than once
  --> testdata/fields/reserved.proto:9:12
   |
 9 |   reserved "baz", "baz";
   |            ^^^^^  ----- `baz` also reserved here
10 |   reserved "baz";
   |            ----- `baz` also reserved here

error: enum value `foo` reserved more than once
  --> testdata/fields/reserved.proto:14:21
   |
14 |   reserved "valid", "foo", "foo", "bar";
   |                     ^^^^^  ----- `foo` also reserved here

error: enum value `bar` reserved more than once
  --> testdata/fields/reserved.proto:14:35
   |
14 |   reserved "valid", "foo", "foo", "bar";
   |                                   ^^^^^
15 |   reserved "bar";
   |            ----- `bar` also reserved here

error: enum value `baz` reserved more than once
  --> testdata/fields/reserved.proto:16:12
   |
16 |   reserved "baz", "also_valid", "baz";
   |            ^^^^^                ----- `baz` also reserved here
17 |   reserved "baz";
   |            ----- `baz` also reserved here

encountered 6 errors
